examples/test/testpolicy7832.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7832
  namespace: namespace122
spec:
  podSelector:
    matchLabels:
      key18: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value5
          key16: value3
          key32: value16
      podSelector:
        matchLabels:
          key1: value49
          key13: value19
          key44: value44
